--- a/index.html
+++ b/index.html
@@ -1,1 +1,337 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Петербургский чайный синдикат — авторский чай в стильной упаковке</title>
 
+  <!-- SEO -->
+  <meta name="description" content="Уникальные купажи с травами, ягодами и чёрным чаем. Ручная сборка. Стильная упаковка. Петербургский чайный синдикат — вкус, который запоминается." />
+  <meta name="keywords" content="чай, травяной чай, петербургский чай, чай в тубусах, авторский чай, купить чай, чайный магазин" />
+  <meta name="author" content="Петербургский чайный синдикат" />
+
+  <!-- Open Graph -->
+  <meta property="og:title" content="Петербургский чайный синдикат" />
+  <meta property="og:description" content="Авторский чай с душой Петербурга — в стильной упаковке, с уникальными рецептами." />
+  <meta property="og:image" content="https://via.placeholder.com/1200x630?text=Петербургский+чай" />
+  <meta property="og:url" content="https://your-github-page-url.com" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Петербургский чайный синдикат" />
+  <meta name="twitter:description" content="Чай ручной работы из Петербурга — вкус, стиль, атмосфера." />
+  <meta name="twitter:image" content="https://via.placeholder.com/1200x630?text=Чай" />
+
+  <!-- Favicon -->
+  <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/921/921347.png" type="image/png" />
+
+  <style>
+    :root {
+      --bg: #1e1e1e;
+      --accent: #cda56b;
+      --text: #ffffff;
+      --card-bg: #2c2c2c;
+      --radius: 16px;
+    }
+
+    * {
+      box-sizing: border-box;
+    }
+
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: var(--bg);
+      color: var(--text);
+      scroll-behavior: smooth;
+    }
+
+    header {
+      background: #000;
+      padding: 20px 40px;
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      align-items: center;
+    }
+
+    header h1 {
+      font-size: 24px;
+      margin: 0;
+      color: var(--accent);
+    }
+
+    nav a {
+      color: var(--text);
+      margin-left: 20px;
+      text-decoration: none;
+      font-size: 16px;
+    }
+
+    .hero {
+      text-align: center;
+      padding: 80px 20px;
+      background: url('https://via.placeholder.com/1920x600?text=Чай+и+Питер') center/cover no-repeat;
+      animation: fadeIn 1s ease-in;
+    }
+
+    .hero h2 {
+      font-size: 36px;
+      margin-bottom: 20px;
+    }
+
+    .hero p {
+      font-size: 18px;
+      max-width: 600px;
+      margin: auto;
+    }
+
+    .section {
+      padding: 60px 20px;
+      max-width: 1200px;
+      margin: auto;
+      animation: fadeUp 1s ease-in;
+    }
+
+    .section h3 {
+      text-align: center;
+      font-size: 28px;
+      margin-bottom: 40px;
+      color: var(--accent);
+    }
+
+    .tea-card {
+      display: flex;
+      flex-wrap: wrap;
+      background: var(--card-bg);
+      border-radius: var(--radius);
+      overflow: hidden;
+      margin-bottom: 40px;
+    }
+
+    .tea-card img {
+      width: 300px;
+      height: auto;
+      object-fit: cover;
+    }
+
+    .tea-info {
+      flex: 1;
+      padding: 20px;
+    }
+
+    .tea-info h4 {
+      color: var(--accent);
+      margin-top: 0;
+      font-size: 24px;
+    }
+
+    .tea-info p {
+      margin: 10px 0;
+      line-height: 1.5;
+    }
+
+    .tea-info ul {
+      padding-left: 20px;
+    }
+
+    .buy-buttons {
+      margin-top: 20px;
+    }
+
+    .buy-buttons a {
+      display: inline-block;
+      margin-right: 10px;
+      background: var(--accent);
+      color: #000;
+      padding: 10px 18px;
+      border-radius: var(--radius);
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    .form-container {
+      max-width: 600px;
+      margin: auto;
+    }
+
+    form {
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
+    }
+
+    input, textarea, button {
+      padding: 14px;
+      border: none;
+      border-radius: var(--radius);
+      background: #333;
+      color: var(--text);
+    }
+
+    button {
+      background: var(--accent);
+      color: #000;
+      font-weight: bold;
+      cursor: pointer;
+    }
+
+    .video {
+      text-align: center;
+    }
+
+    .video iframe {
+      max-width: 100%;
+      border-radius: var(--radius);
+      box-shadow: 0 0 20px rgba(0,0,0,0.4);
+    }
+
+    footer {
+      text-align: center;
+      padding: 30px;
+      background: #111;
+      color: #777;
+    }
+
+    @media (max-width: 768px) {
+      .tea-card {
+        flex-direction: column;
+      }
+
+      .tea-card img {
+        width: 100%;
+      }
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(-20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    @keyframes fadeUp {
+      from { opacity: 0; transform: translateY(40px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+  </style>
+</head>
+<body>
+
+<header>
+  <h1>Петербургский чайный синдикат</h1>
+  <nav>
+    <a href="#products">Чаи</a>
+    <a href="#video">Видео</a>
+    <a href="#contact">Контакты</a>
+  </nav>
+</header>
+
+<section class="hero">
+  <h2>Настоящий чай с душой Петербурга</h2>
+  <p>Авторские купажи, стильные тубусы и неповторимый вкус северной столицы</p>
+</section>
+
+<section class="section" id="products">
+  <h3>Наши премиальные купажи</h3>
+
+  <!-- ЧАЙ 1 -->
+  <div class="tea-card">
+    <img src="https://via.placeholder.com/806x1074?text=Северный+вечер" alt="Северный вечер">
+    <div class="tea-info">
+      <h4>Северный вечер</h4>
+      <p><strong>Состав:</strong> чай Ассам, липа, донник, лист малины и смородины, лаванда, бузина.</p>
+      <p><strong>Вкус:</strong> тёплый, расслабляющий, с нотками цветочного уюта. Лучший спутник долгого вечера.</p>
+      <p><strong>Заваривание:</strong></p>
+      <ul>
+        <li>90–95°C, 5–7 минут</li>
+        <li>1 ч.л. на 250 мл воды</li>
+      </ul>
+      <div class="buy-buttons">
+        <a href="https://ozon.ru" target="_blank">Ozon</a>
+        <a href="https://wildberries.ru" target="_blank">Wildberries</a>
+      </div>
+    </div>
+  </div>
+
+  <!-- ЧАЙ 2 -->
+  <div class="tea-card">
+    <img src="https://via.placeholder.com/806x1074?text=Петербургский+спецкупаж" alt="Петербургский спецкупаж">
+    <div class="tea-info">
+      <h4>Петербургский спецкупаж</h4>
+      <p><strong>Состав:</strong> чёрный чай, ягоды, шиповник, бергамот.</p>
+      <p><strong>Вкус:</strong> насыщенный, благородный, с лёгкой кислинкой и бодрящими нотами цитруса.</p>
+      <p><strong>Заваривание:</strong></p>
+      <ul>
+        <li>95°C, 4–5 минут</li>
+        <li>1 ч.л. на 200 мл воды</li>
+      </ul>
+      <div class="buy-buttons">
+        <a href="https://ozon.ru" target="_blank">Ozon</a>
+        <a href="https://wildberries.ru" target="_blank">Wildberries</a>
+      </div>
+    </div>
+  </div>
+
+  <!-- ЧАЙ 3 -->
+  <div class="tea-card">
+    <img src="https://via.placeholder.com/806x1074?text=Яблочный+травяной" alt="Яблочный сбор">
+    <div class="tea-info">
+      <h4>Яблочный травяной сбор</h4>
+      <p><strong>Состав:</strong> яблоко, чабрец, календула, каркаде.</p>
+      <p><strong>Вкус:</strong> фруктово-травяной, лёгкий и освежающий. Хорош как в горячем, так и холодном виде.</p>
+      <p><strong>Заваривание:</strong></p>
+      <ul>
+        <li>90°C, 8–10 минут</li>
+        <li>1–2 ч.л. на 300 мл воды</li>
+      </ul>
+      <div class="buy-buttons">
+        <a href="https://ozon.ru" target="_blank">Ozon</a>
+        <a href="https://wildberries.ru" target="_blank">Wildberries</a>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="section video" id="video">
+  <h3>Видео-обзор</h3>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/RW3e_cIYgL8" title="Tea" frameborder="0" allowfullscreen></iframe>
+</section>
+
+<section class="section" id="contact">
+  <h3>Связаться с нами</h3>
+  <div class="form-container">
+    <form onsubmit="sendToTelegram(event)">
+      <input type="text" id="name" placeholder="Ваше имя" required>
+      <input type="tel" id="phone" placeholder="Телефон" required>
+      <textarea id="message" rows="4" placeholder="Сообщение" required></textarea>
+      <button type="submit">Отправить</button>
+    </form>
+  </div>
+</section>
+
+<footer>
+  &copy; 2025 Петербургский чайный синдикат. Все права защищены.
+</footer>
+
+<script>
+  function sendToTelegram(e) {
+    e.preventDefault();
+    const name = document.getElementById("name").value;
+    const phone = document.getElementById("phone").value;
+    const message = document.getElementById("message").value;
+    const text = `📝 Новая заявка:\nИмя: ${name}\nТелефон: ${phone}\nСообщение: ${message}`;
+    const BOT_TOKEN = 'ВАШ_ТОКЕН'; // 🔁 Подставь свой
+    const CHAT_ID = 'ВАШ_CHAT_ID'; // 🔁 Подставь свой
+
+    fetch(`https://api.telegram.org/bot${BOT_TOKEN}/sendMessage`, {
+      method: 'POST',
+      headers: {'Content-Type': 'application/json'},
+      body: JSON.stringify({ chat_id: CHAT_ID, text })
+    })
+    .then(res => res.ok ? alert("✅ Отправлено!") : alert("❌ Ошибка отправки"))
+    .catch(() => alert("⚠️ Ошибка соединения"));
+  }
+</script>
+
+</body>
+</html>
